<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:background="@color/yellow_ml_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/app_ic_ubication"
                app:layout_constraintBottom_toBottomOf="@id/txtLocation"
                app:layout_constraintStart_toStartOf="@id/iv_options"
                app:layout_constraintTop_toTopOf="@id/txtLocation" />

            <ImageView
                android:id="@+id/iv_options"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="17dp"
                android:src="@drawable/baseline_dehaze_24"
                app:layout_constraintBottom_toBottomOf="@+id/topBar"
                app:layout_constraintEnd_toStartOf="@id/sv_product_filter"
                app:layout_constraintStart_toStartOf="@+id/topBar"
                app:layout_constraintTop_toTopOf="@+id/topBar" />

            <ImageView
                android:id="@+id/iv_shopping_cart"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="18dp"
                android:src="@drawable/navegacion_carrito_idle_24"
                app:layout_constraintBottom_toBottomOf="@+id/topBar"
                app:layout_constraintEnd_toEndOf="@id/topBar"
                app:layout_constraintStart_toEndOf="@+id/sv_product_filter"
                app:layout_constraintTop_toTopOf="@+id/topBar" />


            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginStart="6dp"
                android:gravity="center"
                android:text="@string/app_direction_home"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_location_icon"
                app:layout_constraintTop_toBottomOf="@id/sv_product_filter" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_product_filter"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="17dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/search_view"
                android:theme="@style/AppSearchView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_shopping_cart"
                app:layout_constraintStart_toEndOf="@id/iv_options"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBar"
            app:layout_constraintVertical_bias="0.20"
            app:srcCompat="@drawable/app_error_default" />

        <TextView
            android:id="@+id/error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textColor="@color/gray_550"
            android:text="@string/app_error_something"
            app:layout_constraintEnd_toEndOf="@+id/error_image"
            app:layout_constraintStart_toStartOf="@+id/error_image"
            app:layout_constraintTop_toBottomOf="@+id/error_image" />

        <TextView
            android:id="@+id/error_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/app_error_somethingsubtitle"
            android:textColor="@color/gray_550"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/error_title"
            app:layout_constraintStart_toStartOf="@+id/error_title"
            app:layout_constraintTop_toBottomOf="@id/error_title" />

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/reload"
            android:textColor="@color/blue_ml_500"
            android:backgroundTint="@color/transparent"
            app:layout_constraintStart_toStartOf="@+id/error_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/error_subtitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>